--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -4,3 +4,10 @@
 
 # Uncomment the following line to enable the Lily58 OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_BACKLIGHT=y
+CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
