--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -8,6 +8,6 @@ CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_ZMK_BACKLIGHT=y
+#CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_POINTING=y
 CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
