--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -4,10 +4,22 @@
 
 # Uncomment the following line to enable the Lily58 OLED Display
 CONFIG_ZMK_DISPLAY=y
+
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
-#CONFIG_ZMK_BACKLIGHT=y
+CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=180
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=8
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=98
+#CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+
+CONFIG_ZMK_BACKLIGHT=y
+#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
+#CONFIG_ZMK_BACKLIGHT_BRT_STEP=10
+#CONFIG_ZMK_BACKLIGHT_BRT_START=40
+
 CONFIG_ZMK_POINTING=y
 CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
