--- a/build.yaml
+++ b/build.yaml
@@ -21,7 +21,9 @@
 include:
   - board: nice_nano_v2
     shield: lily58_left
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano_v2
     shield: lily58_right
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano_v2
     shield: settings_reset
